@startuml
'https://plantuml.com/class-diagram

package Job
{
    class BackupJob
    {
        + List<JobObject> JobObjects
        + IRepository Repository
        + void AddJobObject(JobObject jobObject)
        + void RemoveJobObject(JobObject jobObject))
        + JobObject FindJobObject(string path)
    }
    
    class JobObject
    {
        + string path
    }
}

package Repository
{
    interface IRepository
    {
        + UploadVersion(List<Storages> storages)
    }
    
    class LocalRepository
    {
        + List<RestorePoint> RestorePoints
    }
    class RestorePoint
    {
        + List<Storage> Storages
    }
    class Storage
    {
        + string temporary
    }
}

package StorageCreators
{
    interface IStorageCreator
    {
        + List<LocalStorage> Compress(List<JobObjects> jobObjects)
    }
    
    class SingleStorageCreator
    class SplitStorageCreator
}

BackupJob *-- JobObject
BackupJob *-- IRepository
BackupJob *-- IStorageCreator
LocalRepository --|> IRepository
SingleStorageCreator --|> IStorageCreator
SplitStorageCreator --|> IStorageCreator
@enduml